added country and multiple wallets